Fixes #2 problem when the author placeholder would cause a horizontal scroll bar to show up

--- a/style/index.css
+++ b/style/index.css
@@ -27,7 +27,7 @@
     font-size: 10px;
     margin-bottom: 6px;
     margin-top: 6px;
-    width: 500px;
+    max-width: 500px;
     color: #c4cdd6
 }
 
